--- a/howto.html
+++ b/howto.html
@@ -5,9 +5,40 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Avatar PPS Diagnosis Enhancement - Implementation Guide</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="howto.js"></script>	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="howto.css">
 </head>
 <body>
-	
+
+   <div class="container">
+		<div class="form-row">
+			<div class="col">
+				<label for="programCode">Program Code</label>
+				<input type="text" class="form-control" id="programCode" name="programCode"/>
+			</div>
+			<div class="col">
+				<label for="programValue">Program Value</label>
+				<input type="text"  class="form-control" id="programValue" name="programValue" />
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+					<button class="btn btn-primary btn-sm" id="addProgram" name="addProgram">Add Program</button>
+					<button class="btn btn-danger btn-sm" id="clearProgram" name="clearProgram">Reset Programs</button>			
+			</div>			
+		</div>
+
+
+		<ul id="programList">
+		</ul>
+
+		<div id="sqlOutputArea">
+			<textarea class="form-control" id="sqlOutput">
+
+			</textarea>
+		</div>
+
+	</div>
+	<script src="howto.js"></script>	
 </body>
 </html>
