--- a/howto.html
+++ b/howto.html
@@ -24,7 +24,7 @@
 		<div class="row">
 			<div class="col">
 					<button class="btn btn-primary btn-sm" id="addProgram" name="addProgram">Add Program</button>
-					<button class="btn btn-danger btn-sm" id="clearProgram" name="clearProgram">Reset Programs</button>			
+					<button class="btn btn-danger btn-sm" id="clearProgram" name="clearProgram">Cancel Entry</button>			
 			</div>			
 		</div>
 
@@ -32,7 +32,9 @@
 		<ul id="programList">
 		</ul>
 
+
 		<div id="sqlOutputArea">
+			<button class="btn btn-primary btn-sm" id="generateSQL" name="generateSQL">Generate SQL</button>
 			<textarea class="form-control" id="sqlOutput">
 
 			</textarea>
