added message center

--- a/howto.html
+++ b/howto.html
@@ -14,7 +14,7 @@
 <body>
 
 	<div class="container">
-		<div>Messages Section</div>
+		<div id="message-center" class="alert alert-danger hidden"></div>
 		<div class="form-row">
 			<div class="col">
 				<label for="program-code-inpt">Program Code</label>
@@ -46,6 +46,7 @@
 
 	</div>
 	<script src="https://unpkg.com/ionicons@4.3.0/dist/ionicons.js"></script>
+	<script src="https://unpkg.com/clipboard@2.0.0/dist/clipboard.min.js"></script>
 	<script src="howto.js"></script>
 </body>
 
