--- a/howto.html
+++ b/howto.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Avatar PPS Diagnosis Enhancement - Implementation Guide</title>
+	<title>PPS Diagnosis Enhancement - Implementation Guide</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	    crossorigin="anonymous">
@@ -14,7 +14,7 @@
 <body>
 
 	<div class="container">
-		<div id="message-center" class="alert alert-danger hidden"></div>
+		<div id="message-center" class="alert alert-primary hidden"></div>
 		<div class="form-row">
 			<div class="col">
 				<label for="program-code-inpt">Program Code</label>
@@ -37,9 +37,10 @@
 		</ul>
 
 
-		<div id="sqlOutputArea">
+		<div id="sql-output-area">
 			<button class="btn btn-primary btn-sm" id="generate-sql-btn" name="generate-sql-btn">Generate SQL</button>
-			<textarea class="form-control" id="sqlOutput">
+			<button class="btn btn-primary btn-sm btn-copy" id="copy-sql-btn" name="cop-sql-btn" data-clipboard-target="#sql-output-text">Copy SQL to Clipboard</button>
+			<textarea class="form-control" id="sql-output-text">
 
 			</textarea>
 		</div>
