--- a/electron/howto.html
+++ b/electron/howto.html
@@ -81,11 +81,16 @@
 															<div id="row">
 																<input type="text" id="csv-file-path" readonly><button class="btn btn-primary btn-sm" id="select-csv-btn" name="select-csv-btn">Select CSV File</button>
 															</div>
+															<div class="row">
+																<input type="text" id="xml-file-path" readonly><button class="btn btn-primary btn-sm" id="select-xml-btn" name="select-xml-btn">Select XML Export Location</button>
+															</div>
 															<! -- add ouput path and file name selectors -->
 												
 															<div id="row">
 																<button class="btn btn-primary btn-sm" id="generate-import-btn" name="generate-import-btn">Generate Import File</button>
 															</div>
+
+
 														</div>
 												
 											</div>
