updated settings and split message function to utility library

--- a/electron/settings.html
+++ b/electron/settings.html
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+        <link rel="stylesheet" href="css/howto.css">
 </head>
 
 <body>
     <div class="container">
+        <div class="row"><div id="message-center-settings" class="alert alert-primary hidden"></div></div>
         <div class="row">
             <label for="option-id-inpt">PPS Module Option ID</label>
             <input type="text" id="option-id-inpt">
@@ -30,6 +32,7 @@
         </div>
     </div>
 
+    <script scrc="js/utils.js"></script>
     <script src="js/settings.js"></script>
 
 </body>
