--- a/electron/howto.html
+++ b/electron/howto.html
@@ -104,6 +104,7 @@
 	
 	<script src="https://unpkg.com/ionicons@4.3.0/dist/ionicons.js"></script>
 	<script src="https://unpkg.com/clipboard@2.0.0/dist/clipboard.min.js"></script>
+	<script src="js/utils.js"></script>
 	<script src="js/howto.js"></script>
 
 	<!-- jquery global fix for electron -->
