--- a/electron/howto.html
+++ b/electron/howto.html
@@ -7,7 +7,7 @@
 	<title>PPS Diagnosis Enhancement - Implementation Guide</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/howto.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
