--- a/electron/settings.html
+++ b/electron/settings.html
@@ -30,7 +30,11 @@
                     <div class="row row-settings">
                             <div class="col-auto"><label class="form-check-label" for="open-pps-chck">Include Only Open PPS Episodes</label></div>
                             <div class="col"><input class="form-check-input" type="checkbox" id="open-pps-chck"></div>
-                    </div>                
+                    </div>    
+                    <div class="row row-settings">
+                        <div class="col-auto"><label class="form-check-label" for="expand-sql-chck">Expand SQL Query Text Box</label></div>
+                        <div class="col"><input class="form-check-input" type="checkbox" id="expand-sql-chck"></div>
+                </div>                                  
                     <div class="row text-center">
                         <div class="col"><button class="btn btn-dark btn-sm" id="settings-save-btn">Save</button></div>
                         <div class="col"><button class="btn btn-secondary btn-sm" id="settings-exit-btn">Cancel</button></div>
