add pk fields for main/spc in settings and in sql generator

--- a/settings.html
+++ b/settings.html
@@ -24,9 +24,17 @@
                             <div class="col-auto"><input class="form-control form-control-sm settings-input" type="text" id="main-table-inpt"></div>
                     </div>
                     <div class="row row-settings">
+                        <div class="col"><label class="form-check-label" for="main-pkey-inpt">PPS Main Primary Key Field Name</label></div>
+                        <div class="col-auto"><input class="form-control form-control-sm settings-input" type="text" id="main-pkey-inpt"></div>
+                    </div>
+                    <div class="row row-settings">
                             <div class="col"><label class="form-check-label" for="spc-table-inpt">PPS SPC Table Name</label></div>
                                 <div class="col-auto"><input class="form-control form-control-sm settings-input" type="text" id="spc-table-inpt"></div>
                     </div>
+                    <div class="row row-settings">
+                        <div class="col"><label class="form-check-label" for="spc-pkey-inpt">PPS SPC Primary Key Field Name</label></div>
+                        <div class="col-auto"><input class="form-control form-control-sm settings-input" type="text" id="spc-pkey-inpt"></div>
+                    </div>                    
                     <div class="row row-settings">
                             <div class="col-auto"><label class="form-check-label" for="open-pps-chck">Include Only Open PPS Episodes</label></div>
                             <div class="col"><input class="form-check-input" type="checkbox" id="open-pps-chck"></div>
