updated for fix of PPS Main Table PK

--- a/howto.html
+++ b/howto.html
@@ -87,6 +87,21 @@
 																	</div>
 
 																	<div class="row row-howto">
+																		<div class="col"><label class="form-check-label">ODBC Architecture</label></div>
+																				<div class="col">
+																					<div class="form-check-inline">
+																						<input class="form-check-input" type="radio" name="odbc-dsn-arch" id="odbc-dsn-arch-32" value="32" checked>
+																						<label class="form-check-label" for="odbc-dsn-arch-32">32-Bit</label>
+																					</div>
+																					<div class="form-check-inline">
+																						<input class="form-check-input" type="radio" name="odbc-dsn-arch" id="odbc-dsn-arch-64" value="64">
+																						<label class="form-check-label" for="odbc-dsn-arch-64">64-Bit</label>
+																					</div>
+																				</div>
+																	</div>
+
+
+																	<div class="row row-howto">
 																			<div class="col"><label class="form-check-label" for="odbc-user-inpt">Avatar User Name</label></div>
 																					<div class="col-auto"><input class="form-control form-control-sm howto-input" type="text" id="odbc-user-inpt" placeholder="Prefixed with Environment (i.e. LIVE: or UAT:)"></div>
 																	</div>																	
